[gd_scene load_steps=6 format=3 uid="uid://mhfp37lr7q4f"]

[ext_resource type="Script" uid="uid://ys8g367cpqc2" path="res://src/ui_parts/about_menu.gd" id="1_xxltt"]
[ext_resource type="Texture2D" uid="uid://barsurula6j8n" path="res://assets/logos/icon.svg" id="2_t7fbd"]
[ext_resource type="FontFile" uid="uid://depydd16jq777" path="res://assets/fonts/FontMono.ttf" id="3_e8i1t"]
[ext_resource type="Script" uid="uid://ci44864moadn" path="res://src/ui_widgets/GridDrawingControl.gd" id="7_nvctb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jtvwe"]
content_margin_left = 6.0
content_margin_top = 1.0
content_margin_right = 6.0
content_margin_bottom = 1.0
bg_color = Color(0.196078, 0.196078, 0.301961, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.301961, 0.301961, 0.4, 1)

[node name="AboutMenu" type="PanelContainer"]
custom_minimum_size = Vector2(580, 420)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.0
offset_top = -2.0
offset_right = 2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"OverlayPanel"
script = ExtResource("1_xxltt")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 8

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 8

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_t7fbd")
expand_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="VersionLabel" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16

[node name="CopyLabel" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 12
text = "© 2023 MewPurPur
© 2023-present GodSVG contributors"

[node name="TabContainer" type="TabContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 280)
layout_mode = 2
size_flags_vertical = 3
current_tab = 0

[node name="Authors" type="ScrollContainer" parent="VBoxContainer/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/TabContainer/Authors"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="ProjectFounderLabel" type="Label" parent="VBoxContainer/TabContainer/Authors/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1

[node name="Developers" type="VBoxContainer" parent="VBoxContainer/TabContainer/Authors/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 6

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/Authors/VBoxContainer/Developers"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1

[node name="List" type="GridContainer" parent="VBoxContainer/TabContainer/Authors/VBoxContainer/Developers"]
layout_mode = 2
theme_override_constants/h_separation = -1
theme_override_constants/v_separation = -1
columns = 2
script = ExtResource("7_nvctb")
stylebox = SubResource("StyleBoxFlat_jtvwe")

[node name="Translations" type="VBoxContainer" parent="VBoxContainer/TabContainer/Authors/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 6

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/Authors/VBoxContainer/Translations"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1

[node name="List" type="VBoxContainer" parent="VBoxContainer/TabContainer/Authors/VBoxContainer/Translations"]
layout_mode = 2

[node name="Donors" type="ScrollContainer" parent="VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/TabContainer/Donors"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="DiamondDonors" type="VBoxContainer" parent="VBoxContainer/TabContainer/Donors/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 6

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/Donors/VBoxContainer/DiamondDonors"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1

[node name="List" type="GridContainer" parent="VBoxContainer/TabContainer/Donors/VBoxContainer/DiamondDonors"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/h_separation = -1
theme_override_constants/v_separation = -1
script = ExtResource("7_nvctb")
stylebox = SubResource("StyleBoxFlat_jtvwe")

[node name="GoldenDonors" type="VBoxContainer" parent="VBoxContainer/TabContainer/Donors/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 6

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/Donors/VBoxContainer/GoldenDonors"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1

[node name="List" type="GridContainer" parent="VBoxContainer/TabContainer/Donors/VBoxContainer/GoldenDonors"]
layout_mode = 2
theme_override_constants/h_separation = -1
theme_override_constants/v_separation = -1
columns = 2
script = ExtResource("7_nvctb")
stylebox = SubResource("StyleBoxFlat_jtvwe")

[node name="Donors" type="VBoxContainer" parent="VBoxContainer/TabContainer/Donors/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 6

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/Donors/VBoxContainer/Donors"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1

[node name="List" type="GridContainer" parent="VBoxContainer/TabContainer/Donors/VBoxContainer/Donors"]
layout_mode = 2
theme_override_constants/h_separation = -1
theme_override_constants/v_separation = -1
script = ExtResource("7_nvctb")
stylebox = SubResource("StyleBoxFlat_jtvwe")

[node name="PastDiamondDonors" type="VBoxContainer" parent="VBoxContainer/TabContainer/Donors/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 6

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/Donors/VBoxContainer/PastDiamondDonors"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1

[node name="List" type="GridContainer" parent="VBoxContainer/TabContainer/Donors/VBoxContainer/PastDiamondDonors"]
layout_mode = 2
theme_override_constants/h_separation = -1
theme_override_constants/v_separation = -1
script = ExtResource("7_nvctb")
stylebox = SubResource("StyleBoxFlat_jtvwe")

[node name="PastGoldenDonors" type="VBoxContainer" parent="VBoxContainer/TabContainer/Donors/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 6

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/Donors/VBoxContainer/PastGoldenDonors"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1

[node name="List" type="GridContainer" parent="VBoxContainer/TabContainer/Donors/VBoxContainer/PastGoldenDonors"]
layout_mode = 2
theme_override_constants/h_separation = -1
theme_override_constants/v_separation = -1
columns = 2
script = ExtResource("7_nvctb")
stylebox = SubResource("StyleBoxFlat_jtvwe")

[node name="PastDonors" type="VBoxContainer" parent="VBoxContainer/TabContainer/Donors/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 6

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/Donors/VBoxContainer/PastDonors"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1

[node name="List" type="GridContainer" parent="VBoxContainer/TabContainer/Donors/VBoxContainer/PastDonors"]
layout_mode = 2
theme_override_constants/h_separation = -1
theme_override_constants/v_separation = -1
script = ExtResource("7_nvctb")
stylebox = SubResource("StyleBoxFlat_jtvwe")

[node name="License" type="ScrollContainer" parent="VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
metadata/_tab_index = 2

[node name="LicenseLabel" type="Label" parent="VBoxContainer/TabContainer/License"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("3_e8i1t")
theme_override_font_sizes/font_size = 11

[node name="Third-party Licenses" type="ScrollContainer" parent="VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="ThirdParties" type="VBoxContainer" parent="VBoxContainer/TabContainer/Third-party Licenses"]
layout_mode = 2
theme_override_constants/separation = 18

[node name="GodSVGParts" type="VBoxContainer" parent="VBoxContainer/TabContainer/Third-party Licenses/ThirdParties"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/Third-party Licenses/ThirdParties/GodSVGParts"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "GodSVG parts"
horizontal_alignment = 1

[node name="GodotParts" type="VBoxContainer" parent="VBoxContainer/TabContainer/Third-party Licenses/ThirdParties"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/Third-party Licenses/ThirdParties/GodotParts"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Godot parts"
horizontal_alignment = 1

[node name="LicenseTexts" type="VBoxContainer" parent="VBoxContainer/TabContainer/Third-party Licenses/ThirdParties"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 12

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/Third-party Licenses/ThirdParties/LicenseTexts"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "License texts"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
focus_mode = 0
mouse_default_cursor_shape = 2
text = "Close"
